<resources>
    <string name="app_name">Android History Quiz</string>
    <string name="question_1_of_10">Question 1 of 10</string>
    <string name="question_1">When was the first commercial version of Android released?</string>
    <string name="question_10">What was the initial codename for Android 4.4?</string>
    <string name="question_2">What was the first smartphone to run on Android OS?</string>
    <string name="question_3">What version of Android introduced Wi-Fi Hot Spot functionality?</string>
    <string name="question_4">What version of Android never came to phones?</string>
    <string name="question_5">Choose features added in Android 1.5 Cupcake</string>
    <string name="question_6">Choose all Nexus 4 code names</string>
    <string name="question_7">Project Volta...</string>
    <string name="question_8">What is the codename of Android 7.0?</string>
    <string name="question_9">What company manufactured Nexus 6?</string>
    <string name="question_10_of_10">Question 10 of 10</string>
    <string name="question_2_of_10">Question 2 of 10</string>
    <string name="question_3_of_10">Question 3 of 10</string>
    <string name="question_4_of_10">Question 4 of 10</string>
    <string name="question_5_of_10">Question 5 of 10</string>
    <string name="question_6_of_10">Question 6 of 10</string>
    <string name="question_7_of_10">Question 7 of 10</string>
    <string name="question_8_of_10">Question 8 of 10</string>
    <string name="question_9_of_10">Question 9 of 10</string>
    <string name="q1_a1">September 2005</string>
    <string name="q1_a2">October 2006</string>
    <string name="q1_a3">October 2007</string>
    <string name="q1_a4">September 2008</string>
    <string name="next_button">next</string>
    <string name="q2_a1">HTC Desire</string>
    <string name="q2_a2">LG G1</string>
    <string name="q2_a3">Nexus One</string>
    <string name="q2_a4">HTC Dream</string>
    <string name="q3_a1">Android 2.2 Froyo</string>
    <string name="q3_a2">Android 2.3 Gingerbread</string>
    <string name="q3_a3">Android 2.1 Eclair</string>
    <string name="q3_a4">Android 3.0 Honeycomb</string>
    <string name="q4_a1">Android 2.2 Froyo</string>
    <string name="q4_a2">Android 2.3 Gingerbread</string>
    <string name="q4_a3">Android 3.0 Honeycomb</string>
    <string name="q4_a4">Android 2.1 Eclair</string>
    <string name="q5_a1">Screen auto-rotation</string>
    <string name="q5_a2">On-screen keyboard</string>
    <string name="q5_a3">Video recording</string>
    <string name="q5_a4">Video calls</string>
    <string name="q6_a1">Mako</string>
    <string name="q6_a2">Crespo</string>
    <string name="q6_a3">Hammerhead</string>
    <string name="q6_a4">Occam</string>
    <string name="q7_a1">was an initiative to improve phone\'s battery life</string>
    <string name="q7_a2">was introduced in Android 6.0 Marshmallow</string>
    <string name="q7_a3">includes Battery Historian App</string>
    <string name="q7_a4">adds new Power Saver mode</string>
    <string name="EditText_Hint">Type your answer</string>
    <string name="check_your_answers">Check your answers</string>
</resources>
