<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question4">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="marianstudio.androidhistoryquiz.MainActivity">

        <ImageView
            android:id="@+id/logo"
            style="@style/LogoStyle"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/question_number_bar"
            style="@style/QuestionNumberBarStyle"
            android:text="@string/question_4_of_10" />

        <TextView
            android:id="@+id/question"
            style="@style/QuestionStyle"
            android:text="@string/question_4" />

        <RadioGroup
            android:id="@+id/radio_group"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radio_button_one"
                style="@style/RadioButtonStyle"
                android:text="@string/q4_a1" />

            <RadioButton
                android:id="@+id/radio_button_two"
                style="@style/RadioButtonStyle"
                android:text="@string/q4_a2" />

            <RadioButton
                android:id="@+id/radio_button_three"
                style="@style/RadioButtonStyle"
                android:text="@string/q4_a3" />

            <RadioButton
                android:id="@+id/radio_button_four"
                style="@style/RadioButtonStyle"
                android:text="@string/q4_a4" />

        </RadioGroup>

        <Button
            style="@style/ButtonStyle"
            android:onClick="nextQuestion"
            android:text="@string/next_button" />

    </RelativeLayout>
</ScrollView>