<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question7">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="marianstudio.androidhistoryquiz.MainActivity">

        <ImageView
            android:id="@+id/logo"
            style="@style/LogoStyle"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/question_number_bar"
            style="@style/QuestionNumberBarStyle"
            android:text="@string/question_7_of_10" />

        <TextView
            android:id="@+id/question"
            style="@style/QuestionStyle"
            android:text="@string/question_7" />

        <LinearLayout
            android:id="@+id/checkbox_group"
            style="@style/RadioGroupStyle">

            <CheckBox
                android:id="@+id/checkbox_one"
                style="@style/RadioButtonStyle"
                android:text="@string/q7_a1" />

            <CheckBox
                android:id="@+id/checkbox_two"
                style="@style/RadioButtonStyle"
                android:text="@string/q7_a2" />

            <CheckBox
                android:id="@+id/checkbox_three"
                style="@style/RadioButtonStyle"
                android:text="@string/q7_a3" />

            <CheckBox
                android:id="@+id/checkbox_four"
                style="@style/RadioButtonStyle"
                android:text="@string/q7_a4" />

        </LinearLayout>

        <Button
            style="@style/ButtonStyle"
            android:layout_below="@id/checkbox_group"
            android:onClick="nextQuestion"
            android:text="@string/next_button" />

    </RelativeLayout>
</ScrollView>