<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".question8">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="marianstudio.androidhistoryquiz.MainActivity">

        <ImageView
            android:id="@+id/logo"
            style="@style/LogoStyle"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/question_number_bar"
            style="@style/QuestionNumberBarStyle"
            android:text="@string/question_8_of_10" />

        <TextView
            android:id="@+id/question"
            style="@style/QuestionStyle"
            android:text="@string/question_8" />

        <EditText
            android:id="@+id/edit_text_Q8"
            style="@style/EditTextStyle"
            android:layout_marginLeft="24dp"
            android:hint="@string/EditText_Hint" />

        <Button
            style="@style/ButtonStyle"
            android:layout_below="@id/edit_text_Q8"
            android:onClick="nextQuestion"
            android:text="@string/next_button" />

    </RelativeLayout>
</ScrollView>